fixed overlapping of text with the image.

--- a/src/styles/argon.css
+++ b/src/styles/argon.css
@@ -642,9 +642,10 @@ Coded by www.creative-tim.com
   
   .row {
     display: flex;
+    justify-content: space-evenly;
     flex-wrap: wrap;
     margin-right: -15px;
-    margin-left: -15px;
+    margin-left: -30px;
   }
   
   .no-gutters {
